[package]
name = "portknock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
clap = { version = "4.5.20", features = ["cargo", "string"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
