[package]
name = "portknock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5.20", features = ["cargo", "string"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sexy = { git = "https://github.com/degaart/sexy.git", version = "0.5.3" }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
